Added more Box-Shadows .Added Text Shadows.  Created Home and Coming soon Page. Configured react-router-dom and added to the navigation bar.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,8 +7,14 @@
 }
 html {
 	font-size: 62.5%;
+	scroll-behavior: smooth;
 }
 body {
 	font-size: $default-font-size;
 	font-family: "Poppins", sans-serif;
+}
+#top {
+	position: absolute;
+	top: 0;
+	left: 0;
 }
