--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,7 +9,13 @@
 
 // Layout files
 @import "./layout/header";
-@import "./layout/box-shadows";
+@import "./layout/footer";
 
 // Components files
 @import "./components/boxShadowBox";
+@import "./components/text-shadows";
+@import "./components/BackToTop";
+@import "./components/coming-soon";
+
+// Pages files
+@import "./pages/home";
