--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -8,11 +8,18 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   font-size: 16px;
   font-family: "Poppins", sans-serif;
+}
+
+#top {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .d-flex {
@@ -28,6 +35,10 @@ body {
 .margin-y-big {
   margin-top: 6rem;
   margin-bottom: 6rem;
+}
+
+.margin-top-for-nav {
+  margin-top: 15rem;
 }
 
 img {
@@ -150,22 +161,31 @@ a {
   width: 100%;
 }
 
-.section-box-shadows {
-  margin-top: 14rem;
-}
-
-.box-shadows-container {
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+.footer {
+  width: 100%;
+  height: 8rem;
+  background-color: #333;
+  color: #f6f6f6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+.footer__text {
+  font-weight: 500;
 }
 
 .box-shadow {
   width: 20rem;
   height: 20rem;
   margin: 4rem;
+  background-color: #f6f6f6;
   border-radius: 5px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -203,5 +223,111 @@ a {
 .box-shadow:hover .box-shadow__copy-text {
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
+}
+
+.box-shadows-container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.text-shadows-container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.text-shadow {
+  margin: 4rem;
+  background-color: #333;
+  height: 25rem;
+  border-radius: 5px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  cursor: pointer;
+  color: #f6f6f6;
+}
+
+.text-shadow__main-text {
+  padding: 2rem 4rem;
+  font-size: 4rem;
+  font-weight: 700;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.text-shadow__copy-text {
+  color: #f6f6f6;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.text-shadow:hover .text-shadow__copy-text {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.backToTop {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: #2b2b2b;
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.backToTop__icon {
+  font-size: 2rem;
+  color: #f6f6f6;
+  padding: 1rem;
+}
+
+.coming-soon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 86vh;
+}
+
+.home {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 86vh;
 }
 /*# sourceMappingURL=main.css.map */
