Added more Text-Shadows. Removed copy text form Box-Shadow and Text-Shadow Component  and Implemented tooltip on it.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -16,6 +16,7 @@
 @import "./components/text-shadows";
 @import "./components/BackToTop";
 @import "./components/coming-soon";
+@import "./components/tool-tip";
 
 // Pages files
 @import "./pages/home";
