--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -41,6 +41,10 @@ body {
   margin-top: 15rem;
 }
 
+.margin-big {
+  margin: 4rem;
+}
+
 img {
   max-width: 100%;
 }
@@ -184,7 +188,7 @@ a {
 .box-shadow {
   width: 20rem;
   height: 20rem;
-  margin: 4rem;
+  margin: 0.5rem;
   background-color: #f6f6f6;
   border-radius: 5px;
   display: -webkit-box;
@@ -214,17 +218,6 @@ a {
   transition: all 0.3s;
 }
 
-.box-shadow__copy-text {
-  font-size: 1.4rem;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.box-shadow:hover .box-shadow__copy-text {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-
 .box-shadows-container {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
@@ -242,7 +235,7 @@ a {
 }
 
 .text-shadow {
-  margin: 4rem;
+  margin: 0.5rem;
   background-color: #333;
   height: 25rem;
   border-radius: 5px;
@@ -266,16 +259,6 @@ a {
   font-weight: 700;
   letter-spacing: 5px;
   text-transform: uppercase;
-}
-
-.text-shadow__copy-text {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.text-shadow:hover .text-shadow__copy-text {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
 }
 
 .backToTop {
@@ -315,6 +298,57 @@ a {
       -ms-flex-align: center;
           align-items: center;
   height: 86vh;
+}
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip::before, .tooltip::after {
+  --scale: 0;
+  --tooltip-color: #333;
+  --tooltip-text-color: #f6f6f6;
+  --arrow-size: 10px;
+  --tooltip-offset: -5px;
+  position: absolute;
+  top: var(--tooltip-offset);
+  left: 50%;
+  visibility: hidden;
+  -webkit-transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
+          transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
+  -webkit-transform-origin: bottom center;
+          transform-origin: bottom center;
+  -webkit-transition: all 150ms ease-in;
+  transition: all 150ms ease-in;
+  pointer-events: none;
+}
+
+.tooltip::before {
+  --translate-y: calc(-100% - var(--arrow-size));
+  content: attr(data-tooltip-content);
+  padding: 8px 10px;
+  border-radius: 3px;
+  text-align: center;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  max-width: 100%;
+  background-color: var(--tooltip-color);
+  color: var(--tooltip-text-color);
+}
+
+.tooltip:hover::before, .tooltip:hover::after {
+  --scale: 1;
+  visibility: visible;
+}
+
+.tooltip::after {
+  --translate-y: calc(-1 * var(--arrow-size));
+  content: "";
+  border: var(--arrow-size) solid transparent;
+  border-top-color: var(--tooltip-color);
+  -webkit-transform-origin: top center;
+          transform-origin: top center;
 }
 
 .home {
