--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,6 +9,16 @@ html {
 	font-size: 100%;
 	scroll-behavior: smooth;
 }
+@media screen and (max-width: 900px) {
+	html {
+		font-size: 80%;
+	}
+}
+@media screen and (max-width: 750px) {
+	html {
+		font-size: 70%;
+	}
+}
 
 body {
 	font-size: 16px;
