1. Done some modification in project name in package-lock.json file. 2. Fixed load more data issue in custom firebase fetch hook.  3. There was not onClick event listner in secondary button so added that, although is issue is present in all custom buttons. 4. Created a custom search bar component with suggetion feature. 5. Worked on resources page, Created a resource section, based on this section other sections will be build

--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,21 @@ img {
 	z-index: 20 !important;
 	pointer-events: all !important;
 }
+
+.resource-heading {
+	font-size: calc(16px + 1vw);
+	text-transform: capitalize !important;
+	text-align: center;
+	display: flex !important;
+	align-items: center;
+	justify-content: center;
+}
+.resource-heading svg {
+	font-size: calc(20px + 1vw);
+	display: block;
+}
+
+/* Error message */
+.errorMessage {
+	color: #ef0f4f;
+}
